scriptの指定ミス修正

--- a/index.html
+++ b/index.html
@@ -130,5 +130,5 @@
 	<div class="top-bar">
 		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 	</div>
-	<script src="../../script.js"></script>
+	<script src="script.js"></script>
 </body>
