--- a/history/term3/print6.html
+++ b/history/term3/print6.html
@@ -95,7 +95,7 @@
 		</ul>
 		<h3 id="-">民法をめぐる論争</h3>
 		<ul>
-			<li>1890年，<span class="toggle-text" data-original-text="旧民法"
+			<li>1890年，<span class="toggle-text" data-original-text="民法"
 					onclick="toggleText(this)"></span>公布，フランス民法典をモデルとしつつ従来の日本の法制度を反映させたものだった<ul>
 					<li>→日本の伝統に反すると非難をあびた（<span class="toggle-text" data-original-text="民法典論争"
 							onclick="toggleText(this)"></span>）</li>
