--- a/history/term3/print7.html
+++ b/history/term3/print7.html
@@ -95,7 +95,7 @@
 		<ul>
 			<li>1894年，朝鮮で農民たちが，地方官の圧制をきっかけに蜂起
 				…蜂起の指導者は，全琫準ら民衆宗教である東学を信仰する人々であった</li>
-			<li>朝鮮政府の要請によって清が出兵すると，日本政府もただちに大規模な軍を派遣（<span class="toggle-text" data-original-text="日清戦争"
+			<li>朝鮮政府の要請によって清が出兵すると，日本政府もただちに大規模な軍を派遣（<span class="toggle-text" data-original-text="甲午農民戦争"
 					onclick="toggleText(this)"></span>）</li>
 		</ul>
 		<h3 id="-">日清間の対立</h3>
