--- a/history/term3/print5.html
+++ b/history/term3/print5.html
@@ -18,7 +18,7 @@
 		<h3 id="-">民権運動の急速な高まり</h3>
 		<ul>
 			<li>明治六年の政変で政府を去った板垣退助・後藤象二郎・江藤新平・副島種臣ら土佐・肥前出身の前参議らは，政府の一部の官僚が政策を決定する有司専制を批判した</li>
-			<li>1874年１月，<span class="toggle-text" data-original-text="民選議員設立建白書"
+			<li>1874年１月，<span class="toggle-text" data-original-text="民撰議院設立の建白書"
 					onclick="toggleText(this)"></span>を左院に提出<ul>
 					<li>→これ以後，国民の参政権を確立することをめざした自由民権運動（民権運動）が，急速に高まった</li>
 				</ul>
