--- a/history/term3/print1.html
+++ b/history/term3/print1.html
@@ -74,7 +74,7 @@
 			<li><span class="toggle-text" data-original-text="島津久光"
 					onclick="toggleText(this)"></span>（薩摩藩主の父）は，1862年５月，勅使をともなって江戸に行き，幕政改革を要求した</li>
 			<li>幕府はこれに応じ，一橋慶喜を将軍後見職，松平慶永を政事総裁職，会津藩主松平容保を京都守護職に就任させ，改革を行った（<span class="toggle-text"
-					data-original-text="文久の改革" onclick="toggleText(this)"></span>）
+					data-original-text="文久の幕政改革" onclick="toggleText(this)"></span>）
 				…帰途，島津久光の行列を横ぎったイギリス人を薩摩藩士が殺傷した
 				<span class="toggle-text" data-original-text="生麦事件" onclick="toggleText(this)"></span>がおこった
 			</li>
@@ -93,7 +93,7 @@
 		<h3 id="-">禁門の変（蛤御門の変）</h3>
 		<p>…長州藩は1864年７月，勢力の回復をはかって藩兵を上京させたが，敗北した</p>
 		<h3 id="-">第１次長州戦争</h3>
-		<p>…禁門の変の後，幕府は<span class="toggle-text" data-original-text="第一次長州征討" onclick="toggleText(this)"></span>の軍をおこした
+		<p>…禁門の変の後，幕府は<span class="toggle-text" data-original-text="長州追討" onclick="toggleText(this)"></span>の軍をおこした
 		</p>
 		<ul>
 			<li>イギリス・フランス・アメリカ・オランダも四国連合艦隊を組織，長州藩の下関海峡の砲台を攻撃して占領した（<span class="toggle-text" data-original-text="下関戦争"
@@ -130,7 +130,7 @@
 		<ul>
 			<li>1865年４月，幕府は再度長州追討の命令をくだした</li>
 			<li>薩摩藩はひそかに長州藩を支援，<span class="toggle-text" data-original-text="坂本龍馬"
-					onclick="toggleText(this)"></span>らの仲介で，長州藩を援助する<span class="toggle-text" data-original-text="薩長同盟"
+					onclick="toggleText(this)"></span>らの仲介で，長州藩を援助する<span class="toggle-text" data-original-text="薩長盟約"
 					onclick="toggleText(this)"></span>を成立させた</li>
 		</ul>
 		<h3 id="-">第２次長州戦争</h3>
@@ -147,7 +147,7 @@
 		</ul>
 		<h3 id="-">徳川慶喜と大政奉還</h3>
 		<ul>
-			<li>15代将軍<span class="toggle-text" data-original-text="徳川慶喜" onclick="toggleText(this)"></span>（一橋）<span
+			<li>15代将軍<span class="toggle-text" data-original-text="徳川" onclick="toggleText(this)"></span>（一橋）<span
 					class="toggle-text" data-original-text="慶喜" onclick="toggleText(this)"></span>は，幕府政治の立て直しをはかった</li>
 			<li>土佐藩の後藤象二郎や坂本龍馬は，前藩主<span class="toggle-text" data-original-text="山内豊信"
 					onclick="toggleText(this)"></span>（容堂）を通じ，慶喜に大政奉還を建議した<ul>
