--- a/history/term3/print2.html
+++ b/history/term3/print2.html
@@ -34,7 +34,7 @@
 		</ul>
 		<h3 id="-">秩禄処分</h3>
 		<p>…政府は廃藩置県で職を失った士族に家禄をあたえたが，
-			1876年には<span class="toggle-text" data-original-text="金禄公債"
+			1876年には<span class="toggle-text" data-original-text="金禄公債証書"
 				onclick="toggleText(this)"></span>を交付し，家禄の支給をすべて廃止
 		</p>
 		<ul>
@@ -76,7 +76,7 @@
 		<ul>
 			<li>1871年，<span class="toggle-text" data-original-text="新貨条例"
 					onclick="toggleText(this)"></span>を公布し，通貨単位に円・銭・厘の十進法を採用して硬貨を発行した</li>
-			<li>1872年，<span class="toggle-text" data-original-text="大蔵省" onclick="toggleText(this)"></span>が中心となって<span
+			<li>1872年，<span class="toggle-text" data-original-text="渋沢栄一" onclick="toggleText(this)"></span>が中心となって<span
 					class="toggle-text" data-original-text="国立銀行条例"
 					onclick="toggleText(this)"></span>を公布，近代的な金融制度の基礎をととのえた
 				…兌換制度の確立にはいたらなかった</li>
@@ -89,9 +89,9 @@
 			</li>
 			<li>1873年，内務省を新設<ul>
 					<li>→群馬県の<span class="toggle-text" data-original-text="富岡製糸場"
-							onclick="toggleText(this)"></span>など<span class="toggle-text" data-original-text="官営工場"
+							onclick="toggleText(this)"></span>など<span class="toggle-text" data-original-text="官営模範工場"
 							onclick="toggleText(this)"></span>を経営し，製糸・紡績業など軽工業部門の指導にあたった</li>
-					<li>→<span class="toggle-text" data-original-text="内国勧業博覧会"
+					<li>→<span class="toggle-text" data-original-text="勧業博覧会"
 							onclick="toggleText(this)"></span>を開いて新技術の開発と普及をはかった</li>
 				</ul>
 			</li>
