--- a/history/term3/print3.html
+++ b/history/term3/print3.html
@@ -23,7 +23,7 @@
 		</ul>
 		<h3 id="-">文明開化の風潮</h3>
 		<ul>
-			<li><span class="toggle-text" data-original-text="文明開化"
+			<li><span class="toggle-text" data-original-text="ザンギリ頭"
 					onclick="toggleText(this)"></span>に代表される欧米の文化や生活様式が，東京や開港場を中心に広がった</li>
 			<li>洋風の建築物が建てられ，人力車や馬車が走り，ガス灯がかがやいた</li>
 			<li>洋服に帽子，懐中時計を身につけた服装や，肉食も広まった
