--- a/history/term3/print5.html
+++ b/history/term3/print5.html
@@ -88,7 +88,7 @@
 		</ul>
 		<h3 id="-">伊藤博文と対立</h3>
 		<ul>
-			<li>1881年，<span class="toggle-text" data-original-text="明治十四年の政変"
+			<li>1881年，<span class="toggle-text" data-original-text="開拓使官有物払い下げ事件"
 					onclick="toggleText(this)"></span>がおこって民権派の政府攻撃がはげしくなると，伊藤らは民権派に同調したとして大隈らを政府から追放した<ul>
 					<li>→一方で，<span class="toggle-text" data-original-text="国会開設の詔勅"
 							onclick="toggleText(this)"></span>を出して1890年に国会を開くことを公約した（<span class="toggle-text"
@@ -119,7 +119,7 @@
 			<li>西南戦争の戦費調達に多額の不換紙幣が発行</li>
 			<li>また，1876年の国立銀行条例の改正で兌換義務がなくなった国立銀行が急増し，不換銀行券を発行した<ul>
 					<li>→紙幣の価値が急落，インフレーションが進んだ</li>
-					<li>→輸入超過による正貨の減少を受け，政府は<span class="toggle-text" data-original-text="財政整理"
+					<li>→輸入超過による正貨の減少を受け，政府は<span class="toggle-text" data-original-text="官営事業の払い下げ"
 							onclick="toggleText(this)"></span>を決めるなど，財政・紙幣整理に着手</li>
 				</ul>
 			</li>
