しゅうせいいいいい

--- a/history/term3/print7.html
+++ b/history/term3/print7.html
@@ -20,7 +20,7 @@
 		<h3 id="-">井上馨の欧化政策</h3>
 		<ul>
 			<li>1879年に外務卿となった<span class="toggle-text" data-original-text="井上馨"
-					onclick="toggleText(this)"></span>は，<span class="toggle-text" data-original-text="鹿鳴館外交"
+					onclick="toggleText(this)"></span>は，<span class="toggle-text" data-original-text="欧化政策"
 					onclick="toggleText(this)"></span>をとった</li>
 			<li>日本の近代化を欧米に示し，法律を整備することで領事裁判権撤廃の交渉を積極的に進めた</li>
 		</ul>
