歴史おまけのフラッシュカード作成

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<ul>
 				<li><a href="history/term3/print1.html">暗記用</a></li>
 				<li><a href="history/term3/">元データ</a></li>
+				<li><a href="history/term3/flashcard/tangotyou.html">おまけ：フラッシュカード</a></li>
 			</ul>
 		</li>
 		<li>
