歴史カード問題修正

--- a/history/term3/flashcard/tangotyou.html
+++ b/history/term3/flashcard/tangotyou.html
@@ -128,141 +128,142 @@
 	<button id="restartBtn">もう一度</button>
 
 	<script>
-		const wordList = `13代将軍徳川家定のあと継ぎ問題で、徳川斉昭らが推した人物は誰か？,一橋慶喜
-13代将軍徳川家定のあと継ぎ問題で、井伊直弼ら譜代大名が推した紀州藩主は誰か？,徳川慶福（後の徳川家茂）
-一橋慶喜を将軍継嗣に推した派閥を何というか？,一橋派
-徳川慶福を将軍継嗣に推した派閥を何というか？,南紀派
-幕府が朝廷の許可なく通商条約を結んだことに対し、一橋派と結びついて幕府を攻撃した勢力を何というか？,尊王攘夷派（尊攘派）
-1858年から1859年にかけて、大老の井伊直弼が反対派の公家・大名や志士を弾圧した事件を何というか？,安政の大獄
-安政の大獄で処罰された福井藩士と長州藩士はそれぞれ誰か？,橋本左内と吉田松陰
-1860年3月、大老の井伊直弼が水戸藩などの浪士に暗殺された事件を何というか？,桜田門外の変
-井伊直弼の死後、朝廷との融和を図る「_____」の方針をとった老中は安藤信正である。,公武合体
-公武合体政策の一環として、将軍家茂の夫人に迎えられた孝明天皇の妹は誰か？,和宮
-1862年、老中安藤信正が尊王攘夷派の浪士に襲撃され負傷した事件を何というか？,坂下門外の変
-1862年、薩摩藩の島津久光が幕政改革を要求し、一橋慶喜を将軍後見職、松平慶永を政事総裁職に就任させた改革を何というか？,文久の幕政改革
-文久の幕政改革で京都守護職に就任した会津藩主は誰か？,松平容保
-1862年、島津久光の行列を横切ったイギリス人を薩摩藩士が殺傷した事件を何というか？,生麦事件
-1863年、薩摩藩と会津藩が公武合体派の公家と結び、長州藩と三条実美ら尊攘派の公家を京都から追放した事件を何というか？,八月十八日の政変
-1864年7月、京都での勢力回復を図った長州藩が薩摩・会津藩などと戦い敗北した事件を何というか？,禁門の変（蛤御門の変）
-禁門の変の後、英・仏・米・蘭の四国連合艦隊が長州藩の下関砲台を攻撃・占領した事件を何というか？,四国艦隊下関砲撃事件
-長州藩で、高杉晋作が結成した身分によらない藩士と庶民からなる軍隊を何というか？,奇兵隊
-高杉晋作や木戸孝允（桂小五郎）が藩の実権を握った後の長州藩がとった路線は何か？,倒幕（幕府勢力を倒す路線）
-生麦事件の報復として1863年にイギリスと薩摩藩の間で起こった戦争を何というか？,薩英戦争
-薩英戦争後、薩摩藩で実権をにぎり、倒幕路線へ転換させた中心人物は誰か？（2名）,西郷隆盛、大久保利通
-坂本龍馬らの仲介で、1866年に薩摩藩と長州藩の間で結ばれた軍事同盟を何というか？,薩長盟約
-幕末に凶作や物価上昇で苦しむ民衆が「_____」をとなえ、百姓一揆や打ちこわしを激発させた。,世直し
-1867年に東海地方から全国に広がった、民衆の熱狂的な乱舞を何というか？,ええじゃないか
-1867年10月14日、15代将軍徳川慶喜が政権を朝廷に返上したことを何というか？,大政奉還
-大政奉還を徳川慶喜に建議した土佐藩の人物は誰か？（2名）,後藤象二郎、坂本龍馬
-1867年12月9日、薩長両藩や岩倉具視らが、天皇中心の新政府樹立を宣言した布告を何というか？,王政復古の大号令
-王政復古の大号令により、将軍・摂政・関白が廃止され、新たに置かれた3つの職を総称して何というか？,三職（総裁・議定・参与）
-王政復古後の_____で、徳川慶喜に対して官位辞退と領地返上が決定された。,小御所会議
-1868年から1869年にかけて、新政府軍と旧幕府軍との間で行われた内戦を何というか？,戊辰戦争
-戊辰戦争の最初の戦いで、新政府軍が旧幕府軍に勝利した戦いを何というか？,鳥羽・伏見の戦い
-東北・越後の諸藩が新政府軍に抵抗するために結成した同盟を何というか？,奥羽越列藩同盟
-戊辰戦争の最後の戦いの舞台となった北海道の城郭で、榎本武揚らが降伏した場所はどこか？,五稜郭（箱館）
-幕末から明治初期にかけての、統一国家の成立とそれに伴う一連の社会変革を総称して何というか？,明治維新
-1868年3月、新政府が公議世論の尊重や開国和親など基本方針を示したものを何というか？,五箇条の誓文
-五箇条の誓文の公布後、新政府の組織を定め、中央政府に権力を集中させた法令を何というか？,政体書
-政体書によって権力が集中された中央政府の名称は何か？,太政官
-1868年、江戸は「_____」と改められ、翌年には首都となった。,東京
-1869年、新政府が全国の藩主に土地（版）と人民（籍）を朝廷に返上させた政策を何というか？,版籍奉還
-1871年に公布され、国民を戸単位で把握し、身分制度を解体する基礎となった法律は何か？,戸籍法
-戸籍法により、旧藩主と上層公家、藩士と旧幕臣、百姓と町人はそれぞれ何という族称になったか？,華族、士族、平民
-えた・非人などの称を廃止し、身分・職業ともに平民と同じとした法令を何というか？,解放令
-1871年、新政府が全国の藩を廃止して府と県を置き、中央集権体制を確立した改革を何というか？,廃藩置県
-廃藩置県の断行を武力的に背景となった、薩摩・長州・土佐の藩兵で編成された軍隊を何というか？,御親兵
-明治初期の政府で、薩長土肥の出身者が実権をにぎったことから、のちに何と呼ばれたか？,藩閥政府
-明治政府が経済発展と軍備増強により、国の近代化を進めるために掲げたスローガンは何か？,富国強兵
-1873年に公布された、満20歳以上の男子に兵役を義務付けた法令を何というか？,徴兵令
-徴兵令に対する農民の反対運動を、当時の俗称で何というか？,血税一揆
-士族への家禄支給を全廃するため、1876年に政府が交付した公債証書を何というか？,金禄公債証書
-1872年、政府が地主と自作農に土地の所有権を認めるために交付した証書を何というか？,地券
-1873年に始まり、土地の所有者に地価の3%（後に2.5%）を金納させる税制改革を何というか？,地租改正
-明治政府が近代産業の保護・育成を目指した政策を総称して何というか？,殖産興業
-1871年に通貨単位として円・銭・厘の十進法を採用した法令を何というか？,新貨条例
-1872年に渋沢栄一が中心となって公布された、近代的な金融制度の基礎となった条例は何か？,国立銀行条例
-官営の鉱山や軍事工場などを管轄するために1870年に設置された省は何か？,工部省
-群馬県に設立された官営模範工場で、生糸の増産と品質向上に貢献した工場は何か？,富岡製糸場
-1872年に開通した日本最初の鉄道区間はどこか？,新橋・横浜間
-明治政府の保護を受けて海運業で巨大な利益を上げた三菱会社の創業者は誰か？,岩崎弥太郎
-前島密によって整備された、近代的な官営の通信制度は何か？,郵便制度
-政府と結びついて特権的な保護を受け、巨利を得た商人を何というか？,政商
-1869年に北海道に設置され、開拓事業を進めた役所を何というか？,開拓使
-北海道の開拓と警備に従事した、農業兼業の兵士を何というか？,屯田兵
-明治時代に、東京や開港場を中心に欧米の文化や生活様式が広まった風潮を何というか？,文明開化
-文明開化の象徴とされる、男性の断髪した髪型を何というか？,ザンギリ頭
-1873年から日本で採用された、1日を24時間、1週間を7日とする暦を何というか？,太陽暦
-1868年、神道国教化の方針のもと、神仏習合を禁じるために出された法令を何というか？,神仏分離令
-神仏分離令をきっかけに全国で起こった、寺院や仏像を破壊する仏教排斥運動を何というか？,廃仏毀釈
-1871年に教育行政を統括するために設置された省は何か？,文部省
-1872年に公布され、6歳以上の男女すべての就学を目指した学校制度の法令を何というか？,学制
-学制の地方の実情に合わない点を改め、義務教育年限を短縮するなどして1879年に公布された法令は何か？,教育令
-1877年に創設された、日本の最高学府は何か？,東京大学
-福沢諭吉が創立した私立学校は何か？,慶応義塾
-新島襄が創立した私立学校は何か？,同志社
-人間の平等を説き、ベストセラーとなった福沢諭吉の著書は何か？,学問のすゝめ
-1873年に森有礼、福沢諭吉らが結成し、近代思想の普及に努めた学術団体は何か？,明六社
-ルソーの思想を紹介し、天賦人権論を広めて自由民権運動に影響を与えた思想家は誰か？,中江兆民
-1870年に創刊された、日本最初の日刊新聞は何か？,横浜毎日新聞
-1871年、日本と清が対等な立場で結んだ条約は何か？,日清修好条規
-不平等条約の改正と欧米の制度調査のため、1871年から1873年にかけて派遣された使節団を何というか？,岩倉使節団
-岩倉使節団の全権大使は岩倉具視であったが、副使であった主要人物は誰か？（2名）,木戸孝允、大久保利通
-1873年、西郷隆盛や板垣退助らが朝鮮への使節派遣を主張したが、大久保利通らの反対で覆され、西郷らが下野した政変を何というか？,明治六年の政変
-1875年、日本軍艦が朝鮮の_____付近で挑発行動を行い、砲撃を受けた事件を江華島事件という。,江華島
-江華島事件をきっかけに、1876年に日本が朝鮮に開国を迫って結んだ不平等条約は何か？,日朝修好条規（江華条約）
-1874年、琉球漂流民が殺害されたことを理由に、日本が台湾に出兵した事件を何というか？,台湾出兵
-1879年、明治政府が琉球藩を廃止して沖縄県を設置した一連の出来事を何というか？,琉球処分
-1875年、日本とロシアが結んだ、樺太をロシア領、千島列島を日本領と定めた条約は何か？,千島・樺太交換条約
-明治六年の政変で下野した板垣退助らが、1874年に政府に提出した国会開設を求める意見書を何というか？,民選議院設立の建白書
-国民の参政権確立を目指した、明治初期の政治運動を何というか？,自由民権運動
-板垣退助が故郷の土佐に設立した、自由民権運動の中心となった政治結社を何というか？,立志社
-1875年、全国の政社の連合組織として大阪で創立された組織を何というか？,愛国社
-1875年、大久保利通が板垣退助・木戸孝允と会談し、漸進的な立憲制への移行を取り決めた会議を何というか？,大阪会議
-大阪会議の結果、立法上の諮問機関として_____、最高の司法機関として_____が設けられた。,元老院、大審院
-1875年に政府が制定し、新聞などによる政府批判を厳しく取り締まった法律は何か？（2つ）,新聞紙条例、讒謗律
-1877年、西郷隆盛を指導者として薩摩の士族らが起こした、最大規模の士族反乱を何というか？,西南戦争
-1880年、国会開設を求める全国の代表者が集まり、大阪で結成した組織を何というか？,国会期成同盟
-自由民権運動の中で、民間で作られた憲法草案を総称して何というか？,私擬憲法
-1880年に制定され、政治集会や結社の活動を制限して民権運動を弾圧した条例は何か？,集会条例
-1881年、開拓使官有物の安価な払い下げ計画が発覚し、政府への批判が激化した事件を何というか？,開拓使官有物払い下げ事件
-1881年、開拓使官有物払い下げ事件を機に、政府が民権派に同調した大隈重信を追放し、同時に1890年の国会開設を約束した政変を何というか？,明治十四年の政変
-国会開設の勅諭の後、板垣退助を党首として結成された政党は何か？,自由党
-明治十四年の政変で下野した大隈重信を党首として結成された政党は何か？,立憲改進党
-西南戦争の戦費調達のための不換紙幣の乱発などが原因で、明治10年代前半に起こった経済現象は何か？,インフレーション
-明治十四年の政変後、大蔵卿に就任し、財政整理を行った人物は誰か？,松方正義
-松方正義が1882年に設立した、日本の中央銀行は何か？,日本銀行
-松方正義の厳しい緊縮財政によって引き起こされた深刻な不況を何というか？,松方デフレ
-松方デフレ下、1884年に埼玉県で農民が武装蜂起し、軍隊に鎮圧された事件を何というか？,秩父事件
-1882年、憲法調査のために伊藤博文らがヨーロッパへ派遣された際に、特に手本とした国の憲法はどこの国か？,ドイツ（プロイセン）
-1885年に太政官制に代わって創設され、行政権を担うことになった制度は何か？,内閣制度
-日本の初代内閣総理大臣に就任した人物は誰か？,伊藤博文
-地租軽減、言論・集会の自由、対等な条約締結を要求した、1887年の民権運動を何というか？,三大事件建白運動
-三大事件建白運動に対し、政府が民権運動家を東京から追放するために1887年に制定した法律は何か？,保安条例
-1889年2月11日に発布された日本の最初の近代憲法は何か？,大日本帝国憲法（明治憲法）
-大日本帝国憲法が、天皇が国民に与えるという形式をとったことから、何憲法と呼ばれるか？,欽定憲法
-大日本帝国憲法では、国の元首として統治権の全てを握るとされたのは誰か？,天皇
-大日本帝国憲法の下で設置された帝国議会は、_____と衆議院の二院制であった。,貴族院
-最初の衆議院議員選挙法で選挙権が与えられたのは、直接国税をいくら以上納める満25歳以上の男性か？,15円以上
-フランス民法をモデルとした旧民法が「日本の伝統に反する」と批判された論争を何というか？,民法典論争
-新民法で重視され、強い権限が認められた家の長を何というか？,戸主
-初期議会において、政府を支持する勢力と、旧民権派の流れをくむ勢力は、それぞれ何と呼ばれたか？,吏党と民党
-1894年、外務大臣_____のもとで、日英通商航海条約が調印され、領事裁判権の撤廃に成功した。,陸奥宗光
-1882年、朝鮮で軍制改革に反対する兵士らが反乱を起こし、日本公使館を襲撃した事件を何というか？,壬午軍乱
-1884年、金玉均ら開化派が日本の公使と結んでクーデタを起こしたが、清軍に鎮圧された事件を何というか？,甲申事変
-甲申事変の後、日清両国が朝鮮からの同時撤兵と将来の出兵時の事前通知を取り決めた条約は何か？,天津条約
-1894年、朝鮮で東学を信仰する農民たちが蜂起した戦争を何というか？,甲午農民戦争（東学党の乱）
-甲午農民戦争への出兵をきっかけに、1894年に始まった日本と清との戦争を何というか？,日清戦争
-日清戦争の講和条約である_____は、1895年に下関で調印された。,下関条約
-下関条約で、清が日本に割譲した3つの地域はどこか？,遼東半島、台湾、澎湖諸島
-下関条約で日本が遼東半島を獲得したことに対し、ロシアがドイツ・フランスと共に日本に返還を勧告した出来事を何というか？,三国干渉
-三国干渉後、日本国内で国民の対ロシア感情を示すスローガンとして広まった言葉は何か？,臥薪嘗胆
-日清戦争後、台湾の初代総督に就任した人物は誰か？,樺山資紀
-1898年、自由党と進歩党が合同して結成した政党は何か？,憲政党
-憲政党が組織した、日本で最初の政党内閣の首相と内務大臣は誰か？,首相：大隈重信、内務大臣：板垣退助
-第2次山県有朋内閣が、政党の力が軍部におよぶのを防ぐために定めた、陸海軍大臣を現役の大・中将に限定する制度を何というか？,軍部大臣現役武官制
-1900年、第2次山県有朋内閣が制定した、政治運動や労働運動を取り締まるための法律は何か？,治安警察法
-1900年、伊藤博文が旧自由党系の勢力を中心に結成した政党を何というか？,立憲政友会`.split('\n').map(line => {
+		const wordList = `13代将軍徳川家定に子がなかったため、徳川斉昭らが後継者として立てようとした人物は誰ですか？,一橋慶喜（ひとつばしよしのぶ）
+井伊直弼ら譜代大名が14代将軍の後継者として推し、実際に就任した紀州藩主は誰ですか？,徳川慶福（よしとみ）、後の徳川家茂（いえもち）
+一橋慶喜を将軍後継に推した有力大名たちの派閥を何と呼びますか？,一橋派
+幕府が朝廷の許可なく通商条約を結んだことに対し、天皇を尊び、外国を打ち払おうとする思想を何といいますか？,尊王攘夷論
+井伊直弼が、将軍継嗣問題や条約調印に反対した人々を処罰した弾圧事件を何といいますか？,安政の大獄
+安政の大獄で処罰された福井藩士と長州藩士は、それぞれ誰ですか？,橋本左内と吉田松陰
+1860年3月、井伊直弼が江戸城桜田門外で水戸藩の浪士らに暗殺された事件を何といいますか？,桜田門外の変
+井伊直弼の死後、朝廷と幕府の融和をはかる「公武合体」政策を進めた老中は誰ですか？,安藤信正
+公武合体政策の一環として、14代将軍家茂の夫人として迎えられた孝明天皇の妹は誰ですか？,和宮（かずのみや）
+1862年、公武合体政策を進めた安藤信正が尊王攘夷派の浪士に襲われ負傷した事件を何といいますか？,坂下門外の変
+1862年、薩摩藩の島津久光が幕府に要求して行われた幕政改革を何といいますか？,文久の幕政改革
+文久の幕政改革で、将軍後見職に就任したのは誰ですか？,一橋慶喜
+島津久光の行列を横切ったイギリス人を薩摩藩士が殺傷し、後の薩英戦争の原因となった事件は何ですか？,生麦事件
+1863年、薩摩藩と会津藩が公武合体派の公家と結び、長州藩と尊攘派の公家を京都から追放した事件を何といいますか？,八月十八日の政変
+八月十八日の政変で京都を追放された尊攘派の公家7人の中心人物は誰ですか？,三条実美（さんじょうさねとみ）
+1864年、京都での勢力回復を目指した長州藩が、会津・薩摩藩などと戦って敗北した事件は何ですか？,禁門の変（蛤御門の変）
+禁門の変の後、イギリス・フランス・アメリカ・オランダの四国連合艦隊が長州藩の下関砲台を攻撃した事件を何といいますか？,四国艦隊下関砲撃事件
+高杉晋作が組織した、身分を問わない兵で構成された長州藩の軍事力は何ですか？,奇兵隊
+薩英戦争後、薩摩藩で実権を握り、藩の方針を転換させた中心人物は誰ですか？（2名）,西郷隆盛と大久保利通
+土佐藩の坂本龍馬らの仲介で、1866年に成立した薩摩藩と長州藩の軍事同盟を何といいますか？,薩長盟約（薩長同盟）
+薩長盟約成立後、幕府が再び長州藩を攻撃した戦争は何ですか？,第2次長州戦争
+幕末、長州戦争などによる物価上昇で生活が苦しくなった民衆が「_____」をとなえる一揆や打ちこわしを激発させた。,世直し
+1867年、土佐藩の坂本龍馬や後藤象二郎が前藩主の山内豊信を通じて15代将軍徳川慶喜に建議したことは何ですか？,大政奉還
+1867年10月14日、徳川慶喜が政権を朝廷に返上したことを何といいますか？,大政奉還
+1867年12月9日、西郷隆盛や岩倉具視らが、天皇中心の新政府樹立を宣言した布告を何といいますか？,王政復古の大号令
+王政復古の大号令で設置された、総裁・議定・参与からなる新政府の役職を総称して何といいますか？,三職
+王政復古直後の会議で、徳川慶喜に官位辞退や領地返上を命じた決定が下された会議は何ですか？,小御所会議
+1868年1月に始まった、新政府軍と旧幕府軍との間の内戦を総称して何といいますか？,戊辰戦争
+戊辰戦争の最初の戦いで、旧幕府軍が新政府軍に敗北した戦いは何ですか？,鳥羽・伏見の戦い
+戊辰戦争で新政府軍に抵抗した東北・越後の諸藩が結成した同盟は何ですか？,奥羽越列藩同盟
+戊辰戦争末期、箱館の五稜郭に立てこもり最後まで抵抗した旧幕府の海軍副総裁は誰ですか？,榎本武揚（えのもとたけあき）
+王政復古から始まる、統一国家の成立とそれに伴う広範囲な諸改革・社会の変化を総称して何といいますか？,明治維新
+1868年3月、新政府が公議世論の尊重など基本方針を天皇が神々に誓う形で示したものを何といいますか？,五箇条の誓文
+1868年、新政府が中央政府として権力を集中させた政治組織を何といいますか？,太政官（だじょうかん）
+1869年、全国の藩主に土地（版）と人民（籍）を朝廷に返上させた政策を何といいますか？,版籍奉還
+版籍奉還の後、旧藩主は新しい役職に任命されましたが、その役職名は何ですか？,知藩事（ちはんじ）
+1871年、国民を直接把握するために公布された法律は何ですか？,戸籍法
+明治新政府によって、藩主と上層の公家は「_____」、藩士と旧幕臣は「_____」、百姓と町人は「_____」という身分に再編成された。,華族、士族、平民
+えた・非人などの称を廃止し、身分・職業とも平民と同じとした法令を何といいますか？,解放令
+1871年、新政府が全国の藩を廃止して府と県を置き、中央から府知事・県令を派遣した改革を何といいますか？,廃藩置県
+薩摩・長州・土佐・肥前出身者が政府の実権をにぎったことから、のちに批判的に呼ばれた政府の名称は何ですか？,藩閥政府
+明治政府が目指した、経済を発展させて国力をつけ、軍備を整備する政策のスローガンは何ですか？,富国強兵
+1873年に公布された、満20歳以上の男子に兵役の義務を課した法令は何ですか？,徴兵令
+徴兵令の負担を嫌った農民らが各地でおこした反対一揆を何といいますか？,血税一揆
+明治政府が、士族に与えていた家禄の支給をすべて廃止した政策を何といいますか？,秩禄処分
+秩禄処分の際、家禄の代わりに士族に交付された公債証書を何といいますか？,金禄公債証書
+土地の所有権を法的に認めるため、地主と自作農に与えられた証明書を何といいますか？,地券
+1873年に定められた、課税基準を収穫高から地価に変更し、金納を原則とする税制改革を何といいますか？,地租改正
+地租改正において、税率は地価の何%に定められましたか？（当初の税率）,3%
+地租改正反対一揆が激化したため、1877年に政府は地租を地価の何%に引き下げましたか？,2.5%
+近代産業の保護・育成を目指した明治政府のさまざまな政策を総称して何といいますか？,殖産興業
+1871年に公布された、通貨単位に円・銭・厘の十進法を採用した法令は何ですか？,新貨条例
+渋沢栄一が中心となり1872年に公布された、近代的な金融制度の基礎を整えるための法令は何ですか？,国立銀行条例
+1870年に新設され、鉱山や軍需工場、造船所など官営事業を管轄した省は何ですか？,工部省
+群馬県に設立された官営模範工場で、生糸の増産と品質向上に貢献した工場は何ですか？,富岡製糸場
+1872年、日本で最初に開通した官営鉄道の区間はどこからどこまでですか？,新橋・横浜間
+明治政府から手厚い保護を受け、海運業で巨大な利益をあげた三菱会社の創業者は誰ですか？,岩崎弥太郎
+前島密によって整えられた、近代的な官営の通信制度は何ですか？,郵便制度
+政府の保護を受けて莫大な利益をあげた三井や三菱のような商人を何と呼びますか？,政商
+1869年に北海道に設置され、開拓事業を進めた役所は何ですか？,開拓使
+北海道の開拓に従事した、農業兼業の兵士を何と呼びますか？,屯田兵
+明治政府が欧米の文化や制度を積極的に導入し、生活様式が変化した風潮を何といいますか？,文明開化
+1873年から日本で採用された、1日を24時間、1週間を7日とする暦は何ですか？,太陽暦
+文明開化の象徴とされた、男性の髪型を「_____頭」と呼んだ。,ザンギリ頭（ざんぎりあたま）
+1868年、神道国教化の方針のもと、神仏習合を禁じるために出された法令は何ですか？,神仏分離令
+神仏分離令をきっかけに全国で起こった、寺院や仏像を破壊する運動を何といいますか？,廃仏毀釈（はいぶつきしゃく）
+1871年に新設され、教育制度の整備を担当した省は何ですか？,文部省
+1872年に公布され、6歳以上の男女すべての就学を目指した学校制度を定めた法令は何ですか？,学制
+学制が地方の実情に合わなかったため、1879年に義務教育年限を短縮するなどして公布された法令は何ですか？,教育令
+1877年に創設された、日本の最高学府である高等教育機関は何ですか？,東京大学
+福沢諭吉が創立した私立学校で、現在の大学の基礎となったものは何ですか？,慶応義塾
+新島襄が京都に設立した、キリスト教主義の私立学校は何ですか？,同志社
+「天は人の上に人を造らず人の下に人を造らず」の一節で知られる、福沢諭吉のベストセラーは何ですか？,『学問のすゝめ』
+1873年に森有礼、福沢諭吉らが結成し、近代思想の普及に努めた学術団体を何といいますか？,明六社
+ルソーの思想を紹介し、自由民権運動に思想的影響を与えた「東洋のルソー」とも呼ばれる思想家は誰ですか？,中江兆民
+1870年に発刊された、日本最初の日刊新聞は何ですか？,『横浜毎日新聞』
+不平等条約の改正交渉と欧米の制度調査のため、1871年に岩倉具視を全権大使として派遣された使節団を何といいますか？,岩倉使節団
+岩倉使節団で副使を務めた中心人物は誰ですか？（2名）,木戸孝允と大久保利通
+1871年、日本と清が対等な立場で結んだ条約は何ですか？,日清修好条規
+岩倉使節団の外遊中、留守政府の中心であった西郷隆盛や板垣退助らが、朝鮮への使節派遣を主張したことを何といいますか？,征韓論
+1873年、征韓論を巡る対立で、帰国した大久保利通らが使節派遣に反対し、西郷隆盛や板垣退助らが政府を辞職した政変を何といいますか？,明治六年の政変
+1875年、朝鮮の江華島付近で日本の軍艦が挑発行動を行い、朝鮮側からの砲撃をきっかけに発生した事件は何ですか？,江華島事件
+江華島事件をきっかけに1876年に締結された、朝鮮に日本の領事裁判権などを認めさせる不平等条約は何ですか？,日朝修好条規（江華条約）
+明治政府が琉球藩を廃止して沖縄県を設置した、1879年の一連の政策を何といいますか？,琉球処分
+1875年、日本とロシアの間で国境を画定するために結ばれ、樺太をロシア領、千島列島を日本領と定めた条約は何ですか？,千島・樺太交換条約
+明治六年の政変で政府を去った板垣退助らが、政府の専制政治を批判し、1874年に提出した国会開設を求める文書は何ですか？,民選議院設立の建白書
+国民の参政権確立を目指して、民選議院設立の建白書提出後に高まった全国的な運動を何といいますか？,自由民権運動
+板垣退助が故郷の土佐で結成した、自由民権運動の中心となった政治結社（政社）は何ですか？,立志社
+1875年、大久保利通が板垣退助や木戸孝允と会談し、立憲制への段階的な移行を決定した会議を何といいますか？,大阪会議
+大阪会議の結果、立法上の諮問機関として設置されたのは元老院と何ですか？,地方官会議
+大阪会議の後、政府が民権運動を取り締まるために制定した2つの法令は何ですか？,新聞紙条例と讒謗律
+1877年、西郷隆盛を指導者として薩摩の士族らが起こした、最大規模の士族反乱は何ですか？,西南戦争
+西南戦争の後、各地の政社が再び結集し、国会開設を求める全国的な組織として1880年に結成されたものは何ですか？,国会期成同盟
+自由民権運動の中で、民間で作られた憲法草案を総称して何といいますか？,私擬憲法
+政府が民権運動の高まりを抑えるため、1880年に政治集会や結社を制限する目的で制定した法令は何ですか？,集会条例
+1881年、政府が北海道の開拓使官有物を安価で払い下げようとして、激しい政府批判を招いた事件を何といいますか？,開拓使官有物払い下げ事件
+開拓使官有物払い下げ事件を機に、国会即時開設を主張した大隈重信らを政府から追放し、10年後の国会開設を約束した政変を何といいますか？,明治十四年の政変
+明治十四年の政変後、板垣退助を党首として結成された日本初の政党は何ですか？,自由党
+大隈重信を党首とし、知識人や商工業者を基盤として結成された政党は何ですか？,立憲改進党
+西南戦争の戦費調達のための不換紙幣の乱発などが原因で、物価が急騰した経済状態を何といいますか？,インフレーション
+明治十四年の政変後、大蔵卿に就任し、緊縮財政と紙幣整理を行った人物は誰ですか？,松方正義
+1882年、松方正義が設立した、唯一の発券銀行として機能する中央銀行は何ですか？,日本銀行
+松方正義の厳しい財政引き締め政策によって引き起こされた深刻な不況を何といいますか？,松方デフレ
+松方デフレによる農村の困窮を背景に、1884年に埼玉県で農民が武装蜂起した事件は何ですか？,秩父事件
+憲法調査のため1882年にヨーロッパへ派遣され、特にドイツの憲法を学んだ人物は誰ですか？,伊藤博文
+1885年、太政官制に代わって創設された、行政の最高機関を何といいますか？,内閣制度
+初代の内閣総理大臣に就任したのは誰ですか？,伊藤博文
+旧民権派が再結集して1886年におこした運動で、地租軽減、言論・集会の自由、対等な条約締結を要求した運動を何といいますか？,三大事件建白運動
+政府が三大事件建白運動を取り締まるために1887年に制定し、中江兆民らを東京から追放した法令は何ですか？,保安条例
+1889年2月11日に発布された、日本の最初の近代的な憲法は何ですか？,大日本帝国憲法（明治憲法）
+大日本帝国憲法は、天皇が国民に与えるという形式で発布されました。このような憲法を何といいますか？,欽定憲法
+大日本帝国憲法が定められた、天皇が国の元首として統治権のすべてをにぎるという主権のあり方を何といいますか？,天皇主権
+大日本帝国憲法の草案を審議するために設置された、天皇の最高諮問機関は何ですか？,枢密院
+大日本帝国憲法の下で設置された議会で、貴族院と衆議院の二院制をとったものを何といいますか？,帝国議会
+衆議院議員選挙法で定められた、選挙権を持つための納税額の条件は、直接国税をいくら以上納めることでしたか？,15円以上
+フランス民法をモデルにした旧民法が「日本の伝統に反する」と批判され、公布が延期された論争を何といいますか？,民法典論争
+新しく公布された民法で重視された、家族制度における戸主の強い権限を何といいますか？,戸主権（こしゅけん）
+第1回衆議院議員総選挙で政府系勢力（吏党）の議席数を上回り、過半数を占めた旧自由民権運動系の勢力を何と呼びますか？,民党
+明治初期の大きな外交課題であった、幕末に結ばれた不平等条約を改正するために特に重視された2つの点は何ですか？,領事裁判権（治外法権）の撤廃と関税自主権の回復
+条約改正のために、鹿鳴館を建設するなど極端な欧化政策を進めた外務卿は誰ですか？,井上馨
+1894年、日英通商航海条約を結び、領事裁判権の撤廃に成功した外務大臣は誰ですか？,陸奥宗光
+1882年、朝鮮で軍制改革に反対する兵士らが反乱を起こし、日本公使館を襲撃した事件は何ですか？,壬午軍乱（じんごぐんらん）
+1884年、金玉均ら朝鮮の開化派が日本の公使と結んでクーデタを起こした事件を何といいますか？,甲申事変（こうしんじへん）
+甲申事変の後、日清両国間の緊張を緩和するために結ばれ、両国軍の朝鮮からの同時撤退などを定めた条約は何ですか？,天津条約
+1894年、朝鮮で東学を信仰する農民たちが蜂起した戦争を何といいますか？,甲午農民戦争（東学党の乱）
+甲午農民戦争への出兵をきっかけに、1894年に始まった日本と清国との戦争は何ですか？,日清戦争
+1895年4月に調印された日清戦争の講和条約を何といいますか？,下関条約（日清講和条約）
+下関条約で、清国が日本に割譲した3つの地域はどこですか？,遼東半島、台湾、澎湖諸島
+下関条約で日本が獲得した遼東半島について、ロシアがドイツとフランスとともに日本に返還を勧告した出来事を何といいますか？,三国干渉
+三国干渉を受け入れた後、国民の間でロシアへの対抗心が高まり、「_____」を合言葉に軍備拡張が進められた。,臥薪嘗胆（がしんしょうたん）
+日清戦争後、台湾の初代総督に任命された人物は誰ですか？,樺山資紀（かばやますけのり）
+日清戦争後、自由党と進歩党が合同して結成した政党は何ですか？,憲政党
+1898年に組織された、日本で最初の政党内閣の通称は何ですか？（首相と内相の名から）,隈板内閣（わいはんないかく）
+第2次山県内閣が定めた、陸海軍大臣を現役の大将・中将に限定する制度を何といいますか？,軍部大臣現役武官制
+1900年、第2次山県内閣が政治運動や労働運動を取り締まるために制定した法律は何ですか？,治安警察法
+1900年、伊藤博文が旧憲政党員らとともに結成した政党は何ですか？,立憲政友会`.split('\n').map(line => {
 			const [word, meaning] = line.split(',');
 			return { word, meaning };
 		});
