--- a/history/term3/print7.html
+++ b/history/term3/print7.html
@@ -121,6 +121,56 @@
 			</li>
 			<li>1895年４月，<span class="toggle-text" data-original-text="下関条約"
 					onclick="toggleText(this)"></span>（日清講和条約）が調印された</li>
+		</ul>
+		<h3 id="-">三国干渉</h3>
+		<ul>
+			<li>遼東半島については，満洲（中国東北部）への進出をねらうロシアがドイツとフランスとともに，返還を日本に勧告<ul>
+					<li>→政府は勧告を受けいれたが，「臥薪嘗胆」を合言葉に，ロシアへの対抗心が高まった</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">台湾では</h3>
+		<ul>
+			<li>1895年５月に台湾民主国の独立が宣言され，各地で民衆による抵抗運動がおこった<ul>
+					<li>→日本は海軍大将の樺山資紀を<span class="toggle-text" data-original-text="台湾総督" onclick="toggleText(this)"></span>に任命し，武力でおさえた</li>
+				</ul>
+			</li>
+			<li>民政局長に後藤新平が就任，土地調査事業，度量衡の統一，交通基盤の整備など植民地経営をおしすすめた</li>
+		</ul>
+		<h3 id="-">政府と政党との提携</h3>
+		<ul>
+			<li>日清戦争後，政府と政党の関係は大きく変化</li>
+			<li>国際情勢に対応するため，政府は大規模な軍備拡張を中心とする国力の充実をはかり，賠償金を軍備の拡張や工業化にあてた
+				…国力の充実に必要な予算を確保するために，政府は超然主義を放棄して政党との提携にふみきった</li>
+		</ul>
+		<h3 id="-">最初の政党内閣</h3>
+		<ul>
+			<li>第３次伊藤内閣は軍備拡大のため地租増徴案を提出<ul>
+					<li>→反対する自由党と進歩党は，1898年に合同して<span class="toggle-text" data-original-text="憲政党" onclick="toggleText(this)"></span>を結成した</li>
+				</ul>
+			</li>
+			<li>伊藤は退陣し，憲政党による最初の政党内閣である第１次大隈重信内閣が組織され，板垣退助が内務大臣に就任した（<span class="toggle-text" data-original-text="隈板内閣" onclick="toggleText(this)"></span>）<ul>
+					<li>→旧自由党系と旧進歩党系の対立もあり，わずか４か月で内閣は総辞職した</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">第２次山県内閣</h3>
+		<ul>
+			<li>隈板内閣にかわって第２次山県内閣が成立<ul>
+					<li>→憲政党の協力をえて地租増徴案を成立させた</li>
+				</ul>
+			</li>
+			<li>文官任用令をあらため，1900年，陸海軍大臣を現役の大・中将にかぎる
+				<span class="toggle-text" data-original-text="軍部大臣現役武官制" onclick="toggleText(this)"></span>を定めた
+				…政党の力が官僚や軍部におよぶのを防ぐため
+			</li>
+			<li>政治運動・労働運動を取り締まるための<span class="toggle-text" data-original-text="治安警察法" onclick="toggleText(this)"></span>を制定した</li>
+		</ul>
+		<h3 id="-">第４次伊藤内閣</h3>
+		<ul>
+			<li>第２次山県内閣に対し，伊藤は，政党を育成して議会政治を円滑に運営しようと考えた</li>
+			<li>華族の西園寺公望や，旧自由党系の憲政党員らとともに<span class="toggle-text" data-original-text="立憲政友会" onclick="toggleText(this)"></span>（政友会）結成，第４次伊藤内閣を組織した</li>
+		</ul>
 	</div>
 	<a href="#" id="page-top">TOP</a>
 
