後期中間試験終了

--- a/index.html
+++ b/index.html
@@ -12,29 +12,7 @@
 	<h2 id="-">更新情報</h2>
 	<p><a href="UPDATE.md">2025/10/29：テーマの変更</a></p>
 	<hr>
-	<h2 id="-">後期前半</h2>
-	<ul>
-		<li>
-			<p><strong>情報工学演習I</strong></p>
-			<ul>
-				<li><a href="情報工学演習/problems01.md">問題1~20の回答</a></li>
-			</ul>
-		</li>
-		<li>
-			<p><strong>歴史</strong></p>
-			<ul>
-				<li><a href="history/term3/print1.html">暗記用</a></li>
-				<li><a href="history/term3/">元データ</a></li>
-				<li><a href="history/term3/flashcard/tangotyou.html">おまけ：フラッシュカード</a></li>
-			</ul>
-		</li>
-		<li>
-			<p><strong>英語</strong></p>
-			<ul>
-				<li><a href="english/term3/print-test/print12.html">print⑫英単語</a></li>
-			</ul>
-		</li>
-	</ul>
+	<h2 id="-">試験お疲れ様でした!!</h2>
 	<hr>
 	<h2 id="-">日課</h2>
 	<p>タップするとシラバスに飛びます</p>
