--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>template</title>
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="style-v1.css" />
 </head>
 
 <body>
@@ -12,8 +12,9 @@
 	<h2 id="-">更新情報</h2>
 	<p><a href="UPDATE.md">2025/10/29：テーマの変更</a></p>
 	<hr>
-	<h2 id="-">試験お疲れ様でした!!</h2>
+	<h2 id="-">後期末</h2>
 	<hr>
+	<h3><a href="/history/term4/print1.html">歴史プリント</a></h3>
 	<h2 id="-">日課</h2>
 	<p>タップするとシラバスに飛びます</p>
 	<table>
@@ -109,5 +110,5 @@
 	<div class="top-bar">
 		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 	</div>
-	<script src="script.js"></script>
+	<script src="script-v1.js"></script>
 </body>
