--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<hr>
 	<h2 id="-">後期末</h2>
 	<hr>
-	<h3><a href="/history/term4/print1.html">歴史プリント</a></h3>
+	<h3><a href="history/term4/print1.html">歴史プリント</a></h3>
 	<h2 id="-">日課</h2>
 	<p>タップするとシラバスに飛びます</p>
 	<table>
