スマホ要表示全般　変更

--- a/history/term4/print1.html
+++ b/history/term4/print1.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </div>
-    <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+    <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
   </header>
   <main class="hist-main">
     <h1 id="産業革命と資本主義の定着">産業革命と資本主義の定着</h1>
