--- a/history/term4/print4.html
+++ b/history/term4/print4.html
@@ -35,10 +35,12 @@
   <main class="hist-main">
     <h1 id="日露戦争後の社会と政治">日露戦争後の社会と政治</h1>
     <h2 id="課題">■課題</h2>
-    <h3 id="日露戦争後の日本で民衆の不満が高まったのはなぜだろうか">日露戦争後の日本で，民衆の不満が高まったのはなぜだろうか。</h3>
+    <p id="日露戦争後の日本で民衆の不満が高まったのはなぜだろうか">日露戦争後の日本で，民衆の不満が高まったのはなぜだろうか。</p>
     <h3 id="日比谷焼き打ち事件">日比谷焼き打ち事件</h3>
-    <pre><code>- …日本が賠償金をえられないことが伝えられると，民衆は，警察署や政府系の新聞を焼き打ちした
-</code></pre>
+    <ul>
+      <li>…日本が賠償金をえられないことが伝えられると，民衆は，警察署や政府系の新聞を焼き打ちした
+      </li>
+    </ul>
     <h3 id="暴動の増加">暴動の増加</h3>
     <ul>
       <li>戦費をまかなうために外債を発行したことにより，対外債務が増大し，日本経済は不安定となった</li>
@@ -75,8 +77,10 @@
       </li>
     </ul>
     <h3 id="大逆事件">大逆事件</h3>
-    <pre><code>- …1910年，政府は，明治天皇の暗殺を計画したとして，幸徳秋水らを逮捕，12人を死刑に処した
-</code></pre>
+    <ul>
+      <li>…1910年，政府は，明治天皇の暗殺を計画したとして，幸徳秋水らを逮捕，12人を死刑に処した
+      </li>
+    </ul>
     <ul>
       <li>政府は社会主義運動の弾圧に乗り出し，事件以降，社会主義運動は沈滞，「冬の時代」へ入った</li>
     </ul>
