おそらくいい感じ

--- a/history/term4/print4.html
+++ b/history/term4/print4.html
@@ -7,31 +7,9 @@
 </head>
 
 <body>
-  <header class="top-bar">
-    <div class="menu-wrapper">
-      <input type="checkbox" id="menu-toggle" hidden>
-      <label class="menu-icon" for="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-      <div class="overlay"></div>
-      <nav class="menu">
-        <ul>
-          <li><a href="print1.html">プリントNo.1</a></li>
-          <li><a href="print2.html">プリントNo.2</a></li>
-          <li><a href="print3.html">プリントNo.3</a></li>
-          <li><a href="print4.html">プリントNo.4</a></li>
-          <li><a href="print5.html">プリントNo.5</a></li>
-          <li><a href="print6.html">プリントNo.6</a></li>
-          <li><a href="print7.html">プリントNo.7</a></li>
-          <li><a href="print8.html">プリントNo.8</a></li>
-          <li><a href="print9.html">プリントNo.9</a></li>
-        </ul>
-      </nav>
-    </div>
-    <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-  </header>
+
+  <script src="header.js"></script>
+  
   <main class="hist-main">
     <h1 id="日露戦争後の社会と政治">日露戦争後の社会と政治</h1>
     <h2 id="課題">■課題</h2>
