--- a/history/term4/tmp.html
+++ b/history/term4/tmp.html
@@ -21,31 +21,7 @@
 
 	<a href="#" id="page-top">TOP</a>
 
-	<div class="top-bar">
-		<div class="menu-wrapper">
-			<input type="checkbox" id="menu-toggle" hidden>
-			<label class="menu-icon" for="menu-toggle">
-				<span></span>
-				<span></span>
-				<span></span>
-			</label>
-			<div class="overlay"></div>
-			<nav class="menu">
-				<ul>
-					<li><a href="print1.html">プリントNo.1</a></li>
-					<li><a href="print2.html">プリントNo.2</a></li>
-					<li><a href="print3.html">プリントNo.3</a></li>
-					<li><a href="print4.html">プリントNo.4</a></li>
-					<li><a href="print5.html">プリントNo.5</a></li>
-					<li><a href="print6.html">プリントNo.6</a></li>
-					<li><a href="print7.html">プリントNo.7</a></li>
-					<li><a href="print8.html">プリントNo.8</a></li>
-					<li><a href="print9.html">プリントNo.9</a></li>
-				</ul>
-			</nav>
-		</div>
-		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-	</div>
+	<script src="header.js"></script>
 
 	<script src="../../script-v1.js"></script>
 
