--- a/history/term4/print8.html
+++ b/history/term4/print8.html
@@ -9,7 +9,7 @@
 <body>
 
   <script src="header.js"></script>
-  
+
   <main class="hist-main">
     <h1 id="戦時体制の強化と第二次世界大戦の展開">戦時体制の強化と第二次世界大戦の展開</h1>
     <h2 id="課題">■課題</h2>
@@ -239,11 +239,15 @@
       <li>労働力不足のため食料生産が減少，都市の住民は，米のかわりに芋などの代用食でしのいだ</li>
     </ul>
     <h3 id="カイロ宣言">カイロ宣言</h3>
-    <pre><code>- …1943年11月，アメリカ・イギリス・中国の首脳が会談，日本の無条件降伏まで徹底して戦うことを決定した
-</code></pre>
+    <ul>
+      <li>…1943年11月，アメリカ・イギリス・中国の首脳が会談，日本の無条件降伏まで徹底して戦うことを決定した
+      </li>
+    </ul>
     <h3 id="ヤルタ協定">ヤルタ協定</h3>
-    <pre><code>- …1945年２月には，アメリカ・イギリス・ソ連の首脳が会談し，ドイツ降伏後３か月以内に，ソ連が対日参戦することを密約した
-</code></pre>
+    <ul>
+      <li>…1945年２月には，アメリカ・イギリス・ソ連の首脳が会談し，ドイツ降伏後３か月以内に，ソ連が対日参戦することを密約した
+      </li>
+    </ul>
     <h3 id="ポツダム宣言">ポツダム宣言</h3>
     <ul>
       <li>1945年７月，アメリカ・イギリス・ソ連の首脳がベルリン郊外のポツダムで会談した</li>
